objects/SGR_Retention_Task_Result__c.object
<CustomObject>
    <fields>
        <fullName>ACAFees__c</fullName>
        <label>ACAFees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planrateresults__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Rate Result</label>
        <referenceTo>SGR_Plan_Rate_Result__c</referenceTo>
        <relationshipLabel>Retention Task Result</relationshipLabel>
        <relationshipName>Retention_Task_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>commission__c</fullName>
        <label>Commission</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>coverageCode__c</fullName>
        <label>Coverage Code</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expense__c</fullName>
        <label>Expense</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>m5__c</fullName>
        <label>m5</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>premtax__c</fullName>
        <label>Premtax</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Retention Task Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Retention Task Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retention Task Result</pluralLabel>
    <recordTypes>
        <fullName>Retention_Task_Result_Record_Type</fullName>
        <active>true</active>
        <label>Retention Task Result Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>